More Optional and List.of